--- a/study.html
+++ b/study.html
@@ -107,7 +107,7 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                            <a href="" class="dropdown-item">Thailand</a>
+                                            <a href="thailand.html" class="dropdown-item">Thailand</a>
                                             <a href="" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
@@ -277,7 +277,7 @@
                     </div>
 
                     <!-- Recent Post -->
-                    <div class="mb-5">
+                    <!-- <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Recent Post</h3>
                         <a class="d-flex align-items-center text-decoration-none mb-3" href="">
                             <img class="img-fluid rounded" src="img/blog-80x80.jpg" alt="">
@@ -300,7 +300,7 @@
                                 <small>Jan 01, 2050</small>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- Tag Cloud -->
                     <div class="mb-5">
@@ -353,14 +353,93 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-1.jpg" alt="">
+                                        <img class="img-fluid" src="img/study-abroad/usa.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light text-white" href="study-in-usa.html">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-linkedin-in"></i></a> -->
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Study in USA</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/study-abroad/uk.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light text-white" href="study-in-uk.html">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a> -->
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Study in UK</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/study-abroad/canada.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light text-white" href="study-in-canada.html">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a> -->
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Study in Canada</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/study-abroad/australia.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light text-white" href="study-in-australia.html">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a> -->
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Study in Australia</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/study-abroad/singapore.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light text-white" href="study-in-singapore.html">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -372,14 +451,15 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-2.jpg" alt="">
+                                        <img class="img-fluid" src="img/study-abroad/cyprus.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light text-white" href="study-in-cyprus.html">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-linkedin-in"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -391,14 +471,15 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-3.jpg" alt="">
+                                        <img class="img-fluid" src="img/study-abroad/france.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light text-white" href="study-in-france.html">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-linkedin-in"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -410,14 +491,15 @@
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-4.jpg" alt="">
+                                        <img class="img-fluid" src="img/study-abroad/ireland.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light text-white" href="study-in-ireland.html">More Details</a>
+                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a>
+                                                    class="fab fa-linkedin-in"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
@@ -426,6 +508,7 @@
                                     </div>
                                 </div>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -449,12 +532,10 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i
+                            <a class="btn btn-outline-light btn-square mr-2" href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-square mr-2" href="https://www.facebook.com/profile.php?id=61550644413617"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
