--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
                     <p class="m-0 text-uppercase">About</p>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
     <!-- Header End -->
@@ -150,12 +150,19 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid rounded mb-4 mb-lg-0" src="img/about.jpg" alt="">
+                    <img class="img-fluid rounded mb-4 mb-lg-0" style=" height: 500px;" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
                     <div class="text-left mb-4">
                         <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">About Company</h5>
-                        <h1>Professional Overseas Education</h1>
+                        <h1>Professional Overseas Education</h1><br>
+
+                        <h3>Hykin Overseas is about Education,visa and Tours & Travels.</h3><br>
+
+                        <h5>Hykin Overseas never give any false commitments. It's always stick to the words which were
+                            delivered to the clients</h5>
+
+
                     </div>
                     <p>Hykin Overseas Education is a reputable organization that assists students who are interested in
                         studying abroad. With over a decade of experience in the education industry, Hykin's overseas
@@ -253,29 +260,28 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-normal mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos.
-                                Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet
-                                eirmod eos labore diam</h4>
+                            <h4 class="font-weight-normal mb-4">Hykin overseas is a very genuine company we are totally
+                                satisfied with. We travelled to Thailand every thing is been taken care by them. I must
+                                say u can believe and go forward with Hykin overseas</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.jpg" alt="">
-                            <h5 class="m-0">Client Name</h5>
+                            <h5 class="m-0">Satish Babu</h5>
                             <span>Profession</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-normal mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos.
-                                Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet
-                                eirmod eos labore diam</h4>
+                            <h4 class="font-weight-normal mb-4">Hykin Overseas is best and genuine consultancy, I got
+                                visa within 10 days.m</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.jpg" alt="">
-                            <h5 class="m-0">Client Name</h5>
+                            <h5 class="m-0">Gariganti Suresh</h5>
                             <span>Profession</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-normal mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos.
-                                Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet
-                                eirmod eos labore diam</h4>
+                            <h4 class="font-weight-normal mb-4">Hykin Overseas is the best and genuine consultancy which
+                                I seen so far. I got my visa in just 15 days only. The guidence and Assistance was
+                                really excellent.</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.jpg" alt="">
-                            <h5 class="m-0">Client Name</h5>
+                            <h5 class="m-0">siva krishna ummadi</h5>
                             <span>Profession</span>
                         </div>
                     </div>
