--- a/index.html
+++ b/index.html
@@ -612,29 +612,28 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-normal mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos.
-                                Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet
-                                eirmod eos labore diam</h4>
+                            <h4 class="font-weight-normal mb-4">Hykin overseas is a very genuine company we are totally
+                                satisfied with. We travelled to Thailand every thing is been taken care by them. I must
+                                say u can believe and go forward with Hykin overseas</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.jpg" alt="">
-                            <h5 class="m-0">Client Name</h5>
+                            <h5 class="m-0">Satish Babu</h5>
                             <span>Profession</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-normal mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos.
-                                Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet
-                                eirmod eos labore diam</h4>
+                            <h4 class="font-weight-normal mb-4">Hykin Overseas is best and genuine consultancy, I got
+                                visa within 10 days.m</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.jpg" alt="">
-                            <h5 class="m-0">Client Name</h5>
+                            <h5 class="m-0">Gariganti Suresh</h5>
                             <span>Profession</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-normal mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos.
-                                Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet
-                                eirmod eos labore diam</h4>
+                            <h4 class="font-weight-normal mb-4">Hykin Overseas is the best and genuine consultancy which
+                                I seen so far. I got my visa in just 15 days only. The guidence and Assistance was
+                                really excellent.</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.jpg" alt="">
-                            <h5 class="m-0">Client Name</h5>
+                            <h5 class="m-0">siva krishna ummadi</h5>
                             <span>Profession</span>
                         </div>
                     </div>
@@ -701,11 +700,12 @@
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
                             <!-- <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
-                            <a class="btn btn-outline-light  btn-square mr-2" href="#"><i
+                            <a class="btn btn-outline-light  btn-square mr-2" href="facebook.com/profile.php?id=61550644413617"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i
+                            <a class="btn btn-outline-light btn-square mr-2" href="https://www.youtube.com/@HykinOverseas"><i
                                     class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-square" href="instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                            "><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
