--- a/visit-visa.html
+++ b/visit-visa.html
@@ -326,12 +326,12 @@
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Stock Marketing</a>
-                                <span class="badge badge-primary badge-pill">150</span>
+                                <a href="" class="text-decoration-none h6 m-0">Work Visa</a>
+                                <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Software Training</a>
-                                <span class="badge badge-primary badge-pill">131</span>
+                                <a href="" class="text-decoration-none h6 m-0">Business Visa</a>
+                                <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <!-- <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in France</a>
@@ -349,7 +349,7 @@
                     </div>
 
                     <!-- Recent Post -->
-                    <div class="mb-5">
+                    <!-- <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Recent Post</h3>
                         <a class="d-flex align-items-center text-decoration-none mb-3" href="">
                             <img class="img-fluid rounded" src="img/blog-80x80.jpg" alt="">
@@ -372,7 +372,7 @@
                                 <small>Jan 01, 2050</small>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- Tag Cloud -->
                     <div class="mb-4">
