--- a/study-in-usa.html
+++ b/study-in-usa.html
@@ -165,28 +165,24 @@
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png"
                             alt="Image">
-                        <p>Singapore is a top destination for international students looking to pursue higher education.
-                            The city-state is known for its excellent education system, world-class universities, and
-                            diverse multicultural society.
 
-                            There are many benefits to studying in Singapore including the opportunity to learn from
-                            highly qualified professors, access to state-of-the-art facilities, and exposure to a
-                            dynamic and thriving economy. Additionally, Singapore is a safe and welcoming country that
-                            offers a high quality of life for students.
-
-                            Some of the top universities in Singapore include the National University of Singapore,
-                            Nanyang Technological University, and Singapore Management University. These universities
-                            offer a wide range of programs in various fields such as engineering, business, law, and
-                            medicine.
-
-                            International students who wish to study in Singapore can apply for scholarships and
-                            financial aid to help cover the cost of tuition and living expenses. There are also many
-                            resources available to assist students with the visa application process and settling into
-                            life in Singapore.
-
-                            Overall, studying in Singapore is a fantastic opportunity for students who are looking to
-                            gain a world-class education, experience a new culture, and prepare for a successful career
-                            in the global marketplace.</p>
+                        <h1 class="mb-5">Study In USA Overview.</h1>
+                        <p>The USA has the world’s largest international student population, with over 700,000 students
+                            choosing to broaden their education and life experience in the United States.</p>
+                        <p>The U.S. higher education system offers an unparalleled choice to international students in
+                            the types of institutions, academic and social environments, entry requirements, degree
+                            programs, and fields of study that are available. Students can choose from a variety of
+                            academic areas, from the humanities, management, to science, technology, engineering, and
+                            math (STEM).</p>
+                        <ul>
+                            <li>Need expertise help, wherever you
+                                in the world.F</li>
+                            <li>Check Information provide in your passport.</li>
+                            <li>Go to the official website IELTS & create
+                                profile.</li>
+                            <li>Speaking or writing score review form your exam.</li>
+                            <li>Additional reports institution of coaching center</li>
+                        </ul>
 
 
                     </div>
@@ -312,60 +308,45 @@
 
                 <div class="col-lg-12">
                     <div class="mb-5">
-                        <h2 class="mb-5">Why Study in Singapore ?</h2>
+                        <h2 class="mb-5">Why Study In USA?</h2>
                         <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
                             src="img/singapore/about-singapore.jpg" alt="Image">
-                        <p class="">Singapore is a small island nation located in Southeast Asia that has gained a
-                            reputation as
-                            a world-class education hub. There are several reasons why students from around the globe
-                            choose to study in Singapore.
-                            Firstly, Singapore has a strong education system with highly respected universities and
-                            institutions. The country consistently ranks high in global education rankings, and its
-                            universities are recognized for their academic excellence, research capabilities, and
-                            innovative teaching methods.
-                            Secondly, Singapore is a multicultural and cosmopolitan city-state that offers a diverse and
-                            rich cultural experience. Students can immerse themselves in a blend of cultures, customs,
-                            and languages while studying in Singapore. This international exposure can broaden their
-                            horizons and enhance their global perspectives.
+                        <p class="">The United States of America (USA) is one of the most popular education destinations
+                            in the world that has more than 1 million international students. You will find students
+                            from across the globe in the USA. One of the major reasons is of course that the country
+                            houses some of the most popular as well as the best universities in the world. Let us shed
+                            some light on why one will choose the USA for study.
                         </p>
-                        <p>Thirdly, Singapore is a safe and secure country with a low crime rate. This provides a sense
-                            of security for students, making it an ideal destination to study abroad. The country's
-                            efficient public transport system and well-developed infrastructure also make it easy for
-                            students to navigate the city and explore its attractions.
-                            Lastly, Singapore is a hub for business and innovation, making it an ideal destination for
-                            students interested in entrepreneurship and start-ups. The country's strong economy,
-                            favorable business environment, and supportive government policies create opportunities for
-                            students to gain valuable experience and make connections with like-minded individuals.
-                            All in all, studying in Singapore offers students a unique and rewarding experience that can
-                            enhance their academic and personal growth.
+                        <h3 class="mb-5">Academics</h3>
+                        <p>Some of the best universities in the world are located in the United States. Whether you are
+                            looking for undergraduate programs or Ph.D. studies, you will get only the best academic
+                            opportunities here. There are more than 5000 higher education institutions in the country
+                            and you can come across wide options of courses.
                         </p>
+
+                        <h3 class="mb-5">Campus life and the American culture</h3>
+                        <p>American society is known for its epitome of freedom and opportunities. Even when you are on
+                            campus, you can learn a lot about American culture. Life in a college or university in the
+                            United States is not all about studying the course that you are pursuing. There are various
+                            co-curricular activities that you can take part in and you can even learn a lot from your
+                            friends.</p>
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="mb-4">
                         <div class="text-center mb-5">
-                            <h2 class="mb-4">Singapore Culture</h2>
+                            <h2 class="mb-4">Academic flexibility</h2>
                             <img class="img-fluid rounded w-20 float-left mr-4 mb-3" style="width: 40%; height: 500px;"
                                 src="img/Singapore-culture.jpg" alt="Image">
-                            <p class="">Singapore is a melting pot of cultures, with a diverse range of ethnicities such
-                                as Chinese, Malay, Indian, and Eurasian. This diversity is reflected in the country's
-                                culture, cuisine, and festivals.
-                                One of the hallmarks of Singapore's culture is its food. Singapore is known for its
-                                hawker centres, which offer a wide range of affordable and delicious local dishes. From
-                                the famous chilli crab to the savoury laksa, Singaporean cuisine is a fusion of flavours
-                                that will tantalize your taste buds.
+                            <p class="">According to the needs as well as interests of the students, flexible options
+                                are offered by
+                                the American higher education system. At the undergraduate level, the students get the
+                                option to choose several courses before they declare the major at the end of the second
+                                year. This helps the students in exploring options and be sure of the course that they
+                                actually want to pursue. At the graduate level, the course can be customized as per the
+                                coursework that fits the academic goals
                             </p>
-                            <p>Another aspect of Singapore's culture is its festivals. The country celebrates a variety
-                                of festivals throughout the year, such as Chinese New Year, Deepavali, and Hari Raya.
-                                These festivals are a time for families and friends to come together and celebrate their
-                                culture and traditions.
-                                Singapore is also known for its clean and green environment. The country's government
-                                has implemented strict laws and regulations to ensure that the city remains clean and
-                                sustainable. This has led to the creation of beautiful parks and gardens throughout the
-                                city, such as Gardens by the Bay and the Botanic Gardens.
-                                Overall, Singapore's culture is a unique blend of traditions, cuisines, and values that
-                                make it a vibrant and dynamic place to live and visit.
-                            </p>
+
                         </div>
                     </div>
                 </div>
@@ -373,36 +354,25 @@
                 <div class="col-lg-12">
                     <div class="mb-4">
                         <div class=" text-align: justify mt-5">
-                            <h2 class="mb-3 text-center">Singapore student Visa Application</h2>
+                            <h2 class="mb-3 text-center">Employment Opportunities In USA</h2>
                             <img class="img-fluid float-right rounded w-20 mr-4 mb-3" style="width: 40%; height: 500px;"
                                 src="img/singapore/singapore-visa.jpg" alt="Image">
-                            <p>After receiving the confirmation letter of admission from a desired institute, students
-                                need to apply for a student pass to enter Singapore. Institutes in Singapore will file
-                                the Singapore student pass for Indian application on behalf of the student to Singapore
-                                immigration and checkpoint Authority (ICA). Normally it will take 2 – 3 weeks to get the
-                                Singapore study visa pass.
-                            </p>
-                            <h4 class="mb-3">Documents Required For Singapore Student Visa</h4>
-                            <p>
-                                Singapore student pass requirements for Indian in same order as given hereunder:
-                            <ul>
-                                <li>International student application form</li>
-                                <li>Passport</li>
-                                <li>One Passport size photo (less than 6 months old)</li>
-                                <li>Visa application fee</li>
-                                <li>Bank Statements – ORIGINAL for the last 28 days from all sponsors</li>
-                                <li>Transcripts (Mark sheets -from 10th class till the last degree obtained)</li>
-                                <li>Affidavit of Support to be given by the sponsor on Rs.20 stamp paper (non-judicial)
-                                </li>
-                                <li>Work experience certificate</li>
-                                <li>Fixed Deposit Receipts (if necessary)</li>
-                                <li>Bank loan sanction letter (if necessary)</li>
-                            </ul>
-                            Applicants are encouraged to apply at least 2 months before the commencement of the course.
+                            <p>As a part of choosing the right study abroad destination, checking out the job
+                                opportunities post-study is a major factor. The USA, the giant hope for all the
+                                international students welcomes millions of candidates every year. With an abundance of
+                                job opportunities, the USA has never let down anyone’s dreams
 
-                            If the required documents are not in the English language, officially translated versions,
-                            as well as copies in the original language, are required.
+                            <ul>
+                                <li>The spouse of a student cannot work if they have travelled to the USA on a dependent
+                                    visa.</li>
+                                <li>Students can expect a wage rate of $8 to $11 per hour depending on job profile and
+                                    industry. So a student can expect to earn an average of $640 to $880 Per Month.</li>
+                                <li>30+ Country Immigration and Trusted by people</li>
+                                <li>Provide Immigration Services Experience Agents</li>
+                                
+                            </ul>
                             </p>
+
                         </div>
                     </div>
                 </div>
