--- a/study-in-australia.html
+++ b/study-in-australia.html
@@ -163,7 +163,7 @@
                     <div class="mb-3">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png"
+                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/STUDY_IN_Australia .jpg"
                             alt="Image">
                         <p>Singapore is a top destination for international students looking to pursue higher education.
                             The city-state is known for its excellent education system, world-class universities, and
@@ -219,6 +219,24 @@
                     <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-usa.html" class="text-decoration-none h6 m-0 active">Study In USA</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-uk.html" class="text-decoration-none h6 m-0 active">Study In UK</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-canada.html" class="text-decoration-none h6 m-0 active">Study In
+                                    Canada</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-australia.html" class="text-decoration-none h6 m-0 active">Study In
+                                    Australia</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In
                                     Singapore</a>
