--- a/study-in-schengen.html
+++ b/study-in-schengen.html
@@ -260,6 +260,24 @@
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-usa.html" class="text-decoration-none h6 m-0 active">Study In USA</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-uk.html" class="text-decoration-none h6 m-0 active">Study In UK</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-canada.html" class="text-decoration-none h6 m-0 active">Study In
+                                    Canada</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-australia.html" class="text-decoration-none h6 m-0 active">Study In
+                                    Australia</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In Singapore</a>
                                 <!-- <span class="badge badge-primary badge-pill">150</span> -->
                             </li>
