--- a/study-in-ireland.html
+++ b/study-in-ireland.html
@@ -159,7 +159,7 @@
                 <div class="col-lg-8">
                     <div class="mb-8">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
+                        <h1 class="mb-5">Education is learning what you didn’t even know you didn’t know</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study_in_Ireland.jpg"
                             alt="Image">
                         <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
