--- a/study-in-uk.html
+++ b/study-in-uk.html
@@ -162,9 +162,8 @@
                 <div class="col-lg-8">
                     <div class="mb-3">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/STUDY_IN_uk.jpg"
-                            alt="Image">
+                        <h1 class="mb-5">The biggest adventure you can take is to live the life of your dreams</h1>
+                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/STUDY_IN_uk.jpg" alt="Image">
                         <h1 class="mb-5">Study In UK Overview</h1>
                         <p>Comprising four countries, England, Northern Ireland, Scotland, and Wales, The United Kingdom
                             is one of the best study destinations in the world with around 5,00,000 international
