--- a/study-in-canada.html
+++ b/study-in-canada.html
@@ -162,7 +162,7 @@
                 <div class="col-lg-8">
                     <div class="mb-3">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
+                        <h1 class="mb-5">One’s destination is never a place, but a new way of seeing things</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/STUDY_IN_canada.jpg"
                             alt="Image">
                         <p>Singapore is a top destination for international students looking to pursue higher education.
