--- a/study-in-usa.html
+++ b/study-in-usa.html
@@ -162,7 +162,7 @@
                 <div class="col-lg-8">
                     <div class="mb-3">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
+                        <h1 class="mb-5">The journey of a thousand miles begins with a single step</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png"
                             alt="Image">
 
@@ -215,6 +215,23 @@
                     <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-usa.html" class="text-decoration-none h6 m-0 active">Study In USA</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-uk.html" class="text-decoration-none h6 m-0 active">Study In UK</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-canada.html" class="text-decoration-none h6 m-0 active">Study In
+                                    Canada</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-australia.html" class="text-decoration-none h6 m-0 active">Study In
+                                    Australia</a>
+                                <span class="badge badge-primary badge-pill"></span>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In
                                     Singapore</a>
@@ -369,7 +386,7 @@
                                     industry. So a student can expect to earn an average of $640 to $880 Per Month.</li>
                                 <li>30+ Country Immigration and Trusted by people</li>
                                 <li>Provide Immigration Services Experience Agents</li>
-                                
+
                             </ul>
                             </p>
 
