--- a/study-in-usa.html
+++ b/study-in-usa.html
@@ -163,8 +163,7 @@
                     <div class="mb-3">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">The journey of a thousand miles begins with a single step</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png"
-                            alt="Image">
+                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/STUDY_IN_usa.jpg" alt="Image">
 
                         <h1 class="mb-5">Study In USA Overview.</h1>
                         <p>The USA has the world’s largest international student population, with over 700,000 students
